--- a/src/assets/lang/language.de.json
+++ b/src/assets/lang/language.de.json
@@ -183,7 +183,7 @@
   "feedbackSubmitted": "Feedback wurde versendet :)",
   "noticeReject": "Nicht mehr anzeigen",
   "valentines": "Valentinstag",
-  "viewItemsAdded": "View items added",
-  "newItemsAdded": "New Items Added",
+  "viewItemsAdded": "Neu hinzugefügte Objekte zeigen",
+  "newItemsAdded": "Neu hinzugefügte Objekte",
   "translatedBy": "Meridian & Sphynxcolt"
 }
