refreshed images and json

--- a/src/assets/lang/language.af.json
+++ b/src/assets/lang/language.af.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "en/UpgradeModules.lang",
   "nutrientProcessorJson": "en/NutrientProcessor.lang",
   "constructedTechnologyJson": "en/ConstructedTechnology.lang",
+  "proceduralProductsJson": "en/ProceduralProducts.lang",
   "loading": "Laai tans",
   "about": "Meer inligting",
   "aboutContent": "Hoekom het ek die moeite gedoen om dit op te bou? \r\nEendag het ek No Man's Sky gespeel en wou beplan watter landbouhulpbronne ek op 'n nuwe basis moes hê, het ek gedink dat dit makliker sou wees om 'n toep van die Play/App Store af te laai as om die wiki oop te maak op my tweede monitor. Ek het 'n app gekry en is deur 'n betaalmuur gestop toe ek probeer het om na die resepte vir vervaardigde materiale te kyk. Geïrriteerd het ek besluit om 'n toep te maak wat almal gratis kan gebruik. Dit was ook 'n wonderlike verskoning om 'n bietjie met toep ontwikkeling in Flutter te speel. \r\n \r\nP.S. Ek het ook 'n blog, Inside my Mind - deur Kurt Lourens. Ek het dit nog nie soveel gebruik as wat ek kon nie, maar ek het 'n paar artikels daar😋.",
@@ -185,5 +186,6 @@
   "valentines": "Valentine's Day",
   "viewItemsAdded": "View items added",
   "newItemsAdded": "New Items Added",
+  "proceduralProducts": "Procedural Products",
   "translatedBy": "Charl Meyers"
 }
