--- a/src/assets/lang/language.de.json
+++ b/src/assets/lang/language.de.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "de/UpgradeModules.lang",
   "nutrientProcessorJson": "en/NutrientProcessor.lang",
   "constructedTechnologyJson": "de/ConstructedTechnology.lang",
+  "proceduralProductsJson": "de/ProceduralProducts.lang",
   "loading": "Laden",
   "about": "Über",
   "aboutContent": "Wieso habe ich mich dazu entschieden, diese App zu bauen?\nEines Tages habe ich No Man's Sky gespielt und wollte die farmbaren Ressourcen für meine Basis planen. Ich dachte, es wäre einfacher, eine App aus dem Play/App Store herunterzuladen, als das Wiki auf meinem zweiten Bildschirm zu öffnen. Ich habe eine App gefunden und wurde von einer Bezahlschranke aufgehalten, als ich die Rezepte nachschlagen wollte. Genervt entschied ich mich dazu, eine App zu bauen, die für jeden kostenlos verfügbar ist. Zudem war es eine gute Gelegenheit, etwas mit Flutter App Development herumzuspielen.\n\nP.S. Ich habe auch einen Blog: Inside my Mind - by Kurt Lourens. Ich habe ihn noch nicht so viel benutzt, wie ich könnte, aber ich habe einige Artikel! 😋.\r\n\r\nThis App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
@@ -44,7 +45,7 @@
   "curiosities": "Kuriositäten",
   "curiosity": "Kuriosität",
   "technology": "Technologie",
-  "technologies": "Technologien",
+  "technologies": "Ausrüstung",
   "craftedUsing": "Hergestellt aus",
   "viewAllRawMaterialsRequired": "Alle benötigten rohen Materialien anzeigen",
   "allRawMaterialsRequired": "Alle benötigten rohen Materialien: ",
@@ -185,5 +186,6 @@
   "valentines": "Valentinstag",
   "viewItemsAdded": "Neu hinzugefügte Objekte zeigen",
   "newItemsAdded": "Neu hinzugefügte Objekte",
+  "proceduralProducts": "Procedural Products",
   "translatedBy": "Meridian & Sphynxcolt"
 }
