--- a/src/assets/lang/language.es.json
+++ b/src/assets/lang/language.es.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "es/UpgradeModules.lang",
   "nutrientProcessorJson": "es/NutrientProcessor.lang",
   "constructedTechnologyJson": "es/ConstructedTechnology.lang",
+  "proceduralProductsJson": "es/ProceduralProducts.lang",
   "loading": "Cargando",
   "about": "Acerca",
   "aboutContent": "Por que me moleste en hacer esto?\nUn dia estaba jugando No Man's Sky y quería planear qué recursos debería tener en una nueva base, pensé que sería más fácil bajar una aplicación de la Play/App Store\nque poner la wiki en mi segundo monitor. Encontre una aplicacion y me di cuenta que tenía un muro de pago cuando traté de mirar las recetas para los materiales creados, molesto\ndecidí hacer una aplicación que fuera gratis para todos. También fue una gran excusa para jugar con el desarrollo de aplicaciones con Flutter.\nPosdata. Tambien tengo un blog, Dentro de mi Mente - por Kurt Lorens. No he estado usándola tanto como pudiera, pero tengo algunos artículos.\n\nEsta aplicación no está relacionada con Hello Games o No Man's Sky, sus compañías familiares, o sus compañías maternas, quienes nombres, logos y productos son mostrados en esta aplicación.",
@@ -35,16 +36,16 @@
   "searchProducts": "Buscar productos",
   "searchCuriosities": "Buscar curiosidades",
   "searchCooking": "Buscar productos de cocina",
-  "rawMaterials": "Materias primarias",
+  "rawMaterials": "Materias primas",
   "rawMaterial": "Materia primaria",
-  "products": "Productos",
+  "products": "Productos creados",
   "product": "Producto ",
   "others": "Otros",
   "other": "Otro",
   "curiosities": "Curiosidades",
   "curiosity": "Curiosidad",
   "technology": "Tecnología",
-  "technologies": "Tecnologías",
+  "technologies": "Equipamiento",
   "craftedUsing": "Creado usando",
   "viewAllRawMaterialsRequired": "Ver toda la materia primaria requerida",
   "allRawMaterialsRequired": "Toda la materia primaria requerida",
@@ -74,7 +75,7 @@
   "outputs": "Salidas",
   "steps": "Pasos",
   "building": "Construccion",
-  "buildings": "construcciones",
+  "buildings": "Piezas de construcción",
   "searchBuildings": "Buscar construcciones",
   "blueprintFrom": "Planos de",
   "unknown": "Desconocido",
@@ -125,8 +126,8 @@
   "helloGames": "Hello Games",
   "news": "Noticias",
   "health": "Salud y soporte vital",
-  "jetpackBoost": "Mochila Propulsora",
-  "hazardProtection": "Protección de peligros",
+  "jetpackBoost": "Jetpack",
+  "hazardProtection": "Recarga la protección frente a peligros",
   "energy": "Soporte Vital",
   "stamina": "Energía",
   "duration": "Duración: ",
@@ -185,5 +186,6 @@
   "valentines": "Día de San Valentín ",
   "viewItemsAdded": "View items added",
   "newItemsAdded": "New Items Added",
+  "proceduralProducts": "Procedural Products",
   "translatedBy": "Baltazar Beta & Adrian Ortiz & Héctor González"
 }
