--- a/src/assets/lang/language.hu.json
+++ b/src/assets/lang/language.hu.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "en/UpgradeModules.lang",
   "nutrientProcessorJson": "en/NutrientProcessor.lang",
   "constructedTechnologyJson": "en/ConstructedTechnology.lang",
+  "proceduralProductsJson": "en/ProceduralProducts.lang",
   "loading": "Töltés",
   "about": "Rólunk",
   "aboutContent": "Miért is foglalkozunk ezzel? \nEgyik nap, amikor a No Mans Sky-al játszottamm, meg akartam tervezni, milyen alapanyagokra lesz szükségem egy új bázis létrehozásához. Arra gondoltam, hogy egyszerűbb lenne letölteni egy appot a Paly Store-ból, mint egy második képernyőn a wiki-t nézegetni. Egyet találtam ugyan, de amikor e receptekre kezdtem rákeresni, egyből fizetnem kellett volna, így aztán készítettem egy app-ot, ami mindenkinek ingyenes. Másodsorban kiváló lehetőség volt, hogy gyakoroljam a Flutter app fejlesztő használatát. \n\nU.I.: Van egy blogom is: Inside my Mind - by Kurt Lourens. Nem használtam ki eddig annyira, mint tehetném, de van néhány bejegyzésem😋.",
@@ -185,5 +186,6 @@
   "valentines": "Valentine's Day",
   "viewItemsAdded": "View items added",
   "newItemsAdded": "New Items Added",
+  "proceduralProducts": "Procedural Products",
   "translatedBy": "Charl Meyers"
 }
