--- a/src/assets/lang/language.it.json
+++ b/src/assets/lang/language.it.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "it/UpgradeModules.lang",
   "nutrientProcessorJson": "it/NutrientProcessor.lang",
   "constructedTechnologyJson": "it/ConstructedTechnology.lang",
+  "proceduralProductsJson": "it/ProceduralProducts.lang",
   "loading": "Caricamento",
   "about": "Info",
   "aboutContent": "Perche' ho deciso di creare quest'app? \r\nUn giorno, mentre giocavo a No Man's Sky, decisi di cercare le risorse coltivabili da poter inserire nella nuova base; pensai che fosse più comodo scaricare un'app dal Play/App Store anziche' aprire la pagina di Wiki relativa a No Man's Sky sul monitor secondario. Trovai così un'app, ma, al primo tentativo di ricerca di una formula, venni indirizzato ad una pagina di pagamento! Deluso, decisi di fare un'app che fosse libera per tutti. Fu anche un'occasione per fare pratica con Flutter, framework per lo sviluppo di app. \r\n\r\nP.S. Possiedo un blog: \"Inside my Mind - di Kurt Lorens\". Non l'ho seguito come avrei dovuto, ma ci sono degli articoli😋.\r\n\r\nThis App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
@@ -185,5 +186,6 @@
   "valentines": "Valentine's Day",
   "viewItemsAdded": "View items added",
   "newItemsAdded": "New Items Added",
+  "proceduralProducts": "Procedural Products",
   "translatedBy": "Andrea Bodini & Loky"
 }
