--- a/src/assets/lang/language.nl.json
+++ b/src/assets/lang/language.nl.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "nl/UpgradeModules.lang",
   "nutrientProcessorJson": "nl/NutrientProcessor.lang",
   "constructedTechnologyJson": "nl/ConstructedTechnology.lang",
+  "proceduralProductsJson": "nl/ProceduralProducts.lang",
   "loading": "Laden",
   "about": "Over",
   "aboutContent": "Waarom heb ik de moeite genomen dit te ontwikkelen?\nOp een dag  speelde ik No Man's Sky en wilde plannen welke te bewerken grondstoffen Ik zou moeten hebben bij een nieuwe basis. Ik dacht dat het eenvoudiger was om een app uit de Play/App Store te installeren dan om een Wiki op een tweede monitor open te hebben staan. Toen ik een app vond liep ik gelijk tegen een betaalmuur op toen ik de recepten voor te craften materialen zocht. Wat geiriteerd besloot ik zelf een app te maken die gratis beschikbaar zou zijn. Ook een prima excuus om met wat met Flutter app ontwikkeling te werken. \n\nP.S.Ik heb ook een blog, Inside my Mind - by Kurt Lourens. Nog niet zoveel gebruik van gemaakt als zou moeten, maar er staan wat artikelen😋.\r\n\r\nThis App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
@@ -103,7 +104,7 @@
   "appLanguage": "Huidige taal",
   "guidesUseCompactTiles": "Gidsen: gebruik compacte tegels",
   "darkModeEnabled": "donkere modus",
-  "tradeItems": "Trade Items",
+  "tradeItems": "Handelsproducten",
   "tradeItem": "Trade Item",
   "clear": "verwijderen",
   "searchOptions": "zoek opties",
@@ -185,5 +186,6 @@
   "valentines": "Valentine's Day",
   "viewItemsAdded": "View items added",
   "newItemsAdded": "New Items Added",
+  "proceduralProducts": "Procedural Products",
   "translatedBy": "Arnold van Ree & Sphynxcolt"
 }
