--- a/src/assets/lang/language.pl.json
+++ b/src/assets/lang/language.pl.json
@@ -14,9 +14,10 @@
   "upgradeModulesJson": "pl/UpgradeModules.lang",
   "nutrientProcessorJson": "pl/NutrientProcessor.lang",
   "constructedTechnologyJson": "pl/ConstructedTechnology.lang",
+  "proceduralProductsJson": "pl/ProceduralProducts.lang",
   "loading": "Ładuję",
   "about": "O",
-  "aboutContent": "Dlaczego zadałem sobie trud, aby to stworzyć?\nPewnego razu, grając w No Man's Sky i chcąc zaplanować, jakie surowce do upraw są mi potrzebne w mojej bazie uznałem, że łatwiej będzie ściągnąć aplikację ze sklepu Play czy App store niż odpalić Wiki na drugim monitorze.\nKiedy w końcu znalazłem odpowiednią, okazało się, że treść w niej zawarta jest płatna. Zirytowało  mnie to na tyle, że postanowiłem stworzyć aplikację darmową i dostępną dla każdego. Była to zarazem doskonała okazja, aby pobawić się trochę we Flutterze.\n\nP.s. Prowadzę również bloga na Mind - by Kurt Lourens. Niestety nie mogę poświęcić tyle czasu ile bym chciał, ale coś tam piszę 😋.\n\nAplikacja ta nie jest powiązana w żadnym stopniu z firmą Hello Games, z marką No Man's Sky, żadną z jej filii czy firm powiązanych, których logotypy i grafiki pojawiają się w tej aplikacji.",
+  "aboutContent": "Dlaczego zadałem sobie trud, aby to stworzyć?\nPewnego razu, grając w No Man's Sky i chcąc zaplanować, jakie surowce do upraw są mi potrzebne w mojej bazie, uznałem, że łatwiej będzie ściągnąć aplikację ze sklepu Play czy App store niż odpalić Wiki na drugim monitorze.\nKiedy w końcu znalazłem odpowiednią, okazało się, że treść w niej zawarta jest płatna. Zirytowało  mnie to na tyle, że postanowiłem stworzyć aplikację darmową i dostępną dla każdego. Była to zarazem doskonała okazja, aby pobawić się trochę we Flutterze.\n\nP.s. Prowadzę również bloga na Mind - by Kurt Lourens. Niestety nie mogę poświęcić tyle czasu ile bym chciał, ale coś tam piszę 😋.\n\nAplikacja ta nie jest powiązana w żadnym stopniu z firmą Hello Games, z marką No Man's Sky, żadną z jej filii czy firm powiązanych, których logotypy i grafiki pojawiają się w tej aplikacji.",
   "language": "Wsparcie językowe",
   "languageContent": "Potrzebuję pomocy przy tłumaczeniu tej aplikacji na wiele języków. Znam tylko angielski, afrikaans oraz co nieco francuskiego.\nJeśli zechciałbyś pomóc w tym ciekawym projekcie, daj znać proszę. \nW zamian umieszczę listę wszystkich pomocników na stronie internetowej, oczywiście jeśli wyrazisz zgodę 😁 ",
   "email": "Zaproponuj pomoc",
@@ -44,7 +45,7 @@
   "curiosities": "Osobliwości",
   "curiosity": "Osobliwość",
   "technology": "Technologia",
-  "technologies": "Technologie",
+  "technologies": "Wyposażenie",
   "craftedUsing": "Wykonane przy użyciu",
   "viewAllRawMaterialsRequired": "Wyświetl potrzebne surowce",
   "allRawMaterialsRequired": "Potrzebne surowce: ",
@@ -97,7 +98,7 @@
   "rarity": "Rzadkość ",
   "minValue": "Minimalna wartość ",
   "maxValue": "Maksymalna wartość ",
-  "upgradeModule": "Modół ulepszaj",
+  "upgradeModule": "moduł ulepszenia",
   "homeUseCompactTiles": "Home: Use Compact Tiles",
   "settings": "Ustawienia",
   "appLanguage": "Aktualny Język ",
@@ -118,10 +119,10 @@
   "portals": "Portale",
   "backupPortals": "Portale Zapasowe",
   "restorePortals": "Przywróć Portale",
-  "releaseNotes": "Release Notes",
+  "releaseNotes": "Opis aktualizacji",
   "allItems": "Wszystkie rzeczy",
   "catalogue": "Katalog",
-  "constructedTechnologies": "Skonstruowane technologie",
+  "constructedTechnologies": "Skonstruowana technologia",
   "helloGames": "Hello Games",
   "news": "News",
   "health": "Zdrowie i podtrzymanie życia",
@@ -139,51 +140,52 @@
   "discord": "Discord",
   "twitter": "Twitter",
   "contributors": "Autorzy",
-  "english": "English",
+  "english": "angielski",
   "afrikaans": "Afrikaans",
-  "dutch": "Dutch",
-  "french": "French",
-  "german": "German",
-  "italian": "Italian",
-  "portuguese": "Portuguese",
-  "brazilianPortuguese": "Brazilian Portuguese",
-  "polish": "Polish",
-  "russian": "Russian",
-  "spanish": "Spanish",
-  "hungarian": "Hungarian",
-  "simplifiedChinese": "Simplified Chinese",
-  "traditionalChinese": "Traditional Chinese",
-  "communityMission": "Community Mission",
-  "communityMissionContent": "The Space Anomaly is accumulating research data from Travellers across multiple realities. \r\n\r\nAs further universal data is submitted, the Quicksilver Synthesis Companion will unlock additional collectables.",
-  "patched": "Patched",
-  "general": "General",
-  "useMaterialTheme": "Use Material Theme",
-  "showItemBackgroundColours": "Show Item Background Colours",
-  "portalsNotUploaded": "Portals were not uploaded",
-  "portalsUploaded": "Portals uploaded",
-  "portalsNotRestored": "Portals were not restored",
-  "portalsRestored": "Portals restored",
+  "dutch": "holenderski",
+  "french": "Francuski",
+  "german": "niemiecki",
+  "italian": "włoski",
+  "portuguese": "portugalski",
+  "brazilianPortuguese": "portugalski brazylijski",
+  "polish": "polski",
+  "russian": "rosyjski",
+  "spanish": "hiszpański",
+  "hungarian": "węgierski",
+  "simplifiedChinese": "uproszczony chiński",
+  "traditionalChinese": "tradycyjny chiński",
+  "communityMission": "misja dla społeczności",
+  "communityMissionContent": "Kosmiczna anomalia zbiera informację z różnych rzeczywistości\n\nW trakcie przesyłania nowych danych, kampania żywego złota odblokuje nowe rzeczy do zebrania",
+  "patched": "Naprawione",
+  "general": "Ogólny",
+  "useMaterialTheme": "Użyj motyw materiału",
+  "showItemBackgroundColours": "Pokaż kolor tła przedmiotu",
+  "portalsNotUploaded": "portale nie zostały wysłane",
+  "portalsUploaded": "Portale wysłane",
+  "portalsNotRestored": "Portale nie zostały przywrócone",
+  "portalsRestored": "portale przywrócone",
   "error": "Error",
-  "success": "Success",
-  "romanian": "Romanian",
-  "whatIsNew": "What Is New",
-  "newItem": "New",
-  "somethingWentWrong": "Something went wrong",
-  "researchProgress": "Research Progress",
-  "communityLinks": "Community Links",
-  "social": "Social",
-  "shareContent": "I'm using the Assistant for No Man's Sky App! Available on Google Play and iOS App Store #NoMansSky #NMSAssistant #AssistantForNMS #Android #IOS",
-  "shareTitle": "Assistant for No Man's Sky App!",
-  "share": "Share",
-  "feedback": "Feedback",
-  "yes": "Yes",
-  "no": "No",
-  "submit": "Submit",
-  "feedbackNotSubmitted": "Feedback was not submitted",
-  "feedbackSubmitted": "Feedback Submitted",
-  "noticeReject": "Don't show again",
-  "valentines": "Valentine's Day",
-  "viewItemsAdded": "View items added",
-  "newItemsAdded": "New Items Added",
-  "translatedBy": "Tlumaczenia:"
+  "success": "sukces",
+  "romanian": "rumuński",
+  "whatIsNew": "co nowego",
+  "newItem": "nowy",
+  "somethingWentWrong": "coś poszło nie tak",
+  "researchProgress": "postęp w badaniach",
+  "communityLinks": "Linki społeczności",
+  "social": "społeczność",
+  "shareContent": "Używam asystenta No Man's sky! Dostępny na Google Play oraz iOS App Store #NoMansSky #NMSAssistant #AssistantForNMS #Android #IOS",
+  "shareTitle": "Asystent do No Man's sky!",
+  "share": "Udostępnij",
+  "feedback": "Informacje zwrotne",
+  "yes": "Tak",
+  "no": "Nie",
+  "submit": "Potwierdź",
+  "feedbackNotSubmitted": "Informacja zwrotna nie została wysłana",
+  "feedbackSubmitted": "Informacja zwrotna została wysłana",
+  "noticeReject": "Nie pokazuj ponownie",
+  "valentines": "Walentynki",
+  "viewItemsAdded": "Pokaż dodane przedmioty",
+  "newItemsAdded": "Nowe przedmioty dodane",
+  "proceduralProducts": "Procedural Products",
+  "translatedBy": "Wielbiciel Tacy"
 }
