--- a/src/assets/lang/language.pt-br.json
+++ b/src/assets/lang/language.pt-br.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "pt-br/UpgradeModules.lang",
   "nutrientProcessorJson": "pt-br/NutrientProcessor.lang",
   "constructedTechnologyJson": "pt-br/ConstructedTechnology.lang",
+  "proceduralProductsJson": "pt-br/ProceduralProducts.lang",
   "loading": "Carregando",
   "about": "Sobre",
   "aboutContent": "Por que me preocupei em construir isso?\nUm dia, eu estava jogando No Man's Sky e queria planejar quais recursos disponíveis deveria ter em uma nova base, pensei que seria mais fácil baixar um aplicativo da Play Store do que acessar o wiki no meu segundo monitor. Encontrei um aplicativo e cheguei a um beco sem saída, quando tentei olhar as receitas de materiais criados, irritado decidi criar um aplicativo que seria gratuito para todo mundo usar. Também foi uma ótima desculpa para brincar um pouco com o desenvolvimento do aplicativo Flutter.\n\nP.S. Eu também tenho um blog, Inside my Mind - de Kurt Lourens. Eu não o uso tanto quanto poderia, mas tenho alguns artigos😋.\n\nEste aplicativo não é afiliado à Hello Games ou No Man's Sky, suas subsidiárias ou empresas controladoras, cujos nomes, logotipos e produtos são exibidos neste aplicativo.",
@@ -185,5 +186,6 @@
   "valentines": "Valentine's Day",
   "viewItemsAdded": "View items added",
   "newItemsAdded": "New Items Added",
+  "proceduralProducts": "Procedural Products",
   "translatedBy": "Vicente Izquierdo Gimeno"
 }
