--- a/src/assets/lang/language.ru.json
+++ b/src/assets/lang/language.ru.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "ru/UpgradeModules.lang",
   "nutrientProcessorJson": "ru/NutrientProcessor.lang",
   "constructedTechnologyJson": "ru/ConstructedTechnology.lang",
+  "proceduralProductsJson": "ru/ProceduralProducts.lang",
   "loading": "Загрузка",
   "about": "О приложении",
   "aboutContent": "Почему я вообще создал это приложение? \nОднажды я играл в No Man's Sky и мне захотелось распланировать какие ресурсы мне нужны для новой базы - с этим мне пришла мысль что скачать приложение с Play/App Store будет намного проще чем открыть вики по рецептам на второй монитор. Я нашел приложение но когда я начал смотреть рецепты, оно сразу отпугнуло меня тем что оно просило заплатить за это - из-за этого я решил сделать бесплатный вариант такого приложения. Это так же позволило мне немного поиграться с разработкой на Flutter. \n\nP.S. У меня так же есть блог, 'В чертогах разума - от Курта Лоуренса'. Я не сильно его ещё обжил, но там есть пара интересных статей😋.\r\n\r\nПриложение никак не коллаборируется с Hello Games или с No Man's Sky, её дочерними и материнскими компаниями, чьи имена, логотипы и продукты показаны в приложении.",
@@ -126,7 +127,7 @@
   "news": "Новости",
   "health": "Здоровье и жизнеобеспечение",
   "jetpackBoost": "Реактивный ранец",
-  "hazardProtection": "Перезарядите систему защиты от вредных факторов",
+  "hazardProtection": "Перезарядите систему защиту от вредных факторов",
   "energy": "Система жизнеобеспечения",
   "stamina": "Выносливость",
   "duration": "Длительность: ",
@@ -185,5 +186,6 @@
   "valentines": "Valentine's Day",
   "viewItemsAdded": "View items added",
   "newItemsAdded": "New Items Added",
+  "proceduralProducts": "Procedural Products",
   "translatedBy": "Kradre, SempKid"
 }
