--- a/src/assets/lang/language.zh-hans.json
+++ b/src/assets/lang/language.zh-hans.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "zh-hans/UpgradeModules.lang",
   "nutrientProcessorJson": "zh-hans/NutrientProcessor.lang",
   "constructedTechnologyJson": "zh-hans/ConstructedTechnology.lang",
+  "proceduralProductsJson": "zh-hans/ProceduralProducts.lang",
   "loading": "Loading",
   "about": "About",
   "aboutContent": "Why did I bother to build this? \r\nOne day I was playing No Man's Sky and wanted to plan out what farmable resources I should have at a new base, I thought that it would be easier to download an app from the Play/App Store than pull up the wiki on my second monitor. I found an app and was hit with a pay wall when I tried to look at the recipes for crafted materials, annoyed I decided to make an app that would be free for everyone to use. It was also a great excuse to play a bit with Flutter app development. \r\n\r\nP.S. I also have a blog, Inside my Mind - by Kurt Lourens. I havent been making use of it as much as I could have, but I have some articles😋.\r\n\r\nThis App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
@@ -35,16 +36,16 @@
   "searchProducts": "Search Products",
   "searchCuriosities": "Search Curiosities",
   "searchCooking": "Search Cooking",
-  "rawMaterials": "Raw Materials",
+  "rawMaterials": "原料",
   "rawMaterial": "Raw Material",
-  "products": "Crafted Products",
+  "products": "制作的产品",
   "product": "Crafted Product",
   "others": "Others",
   "other": "Other",
-  "curiosities": "Curiosities",
+  "curiosities": "珍品",
   "curiosity": "Curiosity",
   "technology": "Technology",
-  "technologies": "Equipment",
+  "technologies": "装备",
   "craftedUsing": "Crafted using",
   "viewAllRawMaterialsRequired": "View All Raw Materials Required",
   "allRawMaterialsRequired": "All Raw Materials required: ",
@@ -65,7 +66,7 @@
   "cartContent": "Tap and hold to delete and item.",
   "noCartItems": "No Items in Cart",
   "quantity": "Quantity",
-  "cooking": "Cooking Products",
+  "cooking": "烹饪制品",
   "ingredients": "Ingredients",
   "cookToCreate": "Cook {0} to Create",
   "cookingRecipe": "Cook Using",
@@ -74,7 +75,7 @@
   "outputs": "Outputs",
   "steps": "Steps",
   "building": "Building",
-  "buildings": "Construction Parts",
+  "buildings": "建筑配件",
   "searchBuildings": "Search Buildings",
   "blueprintFrom": "Blueprint from",
   "unknown": "Unknown",
@@ -103,7 +104,7 @@
   "appLanguage": "Current Language",
   "guidesUseCompactTiles": "Guides: Use Compact Tiles",
   "darkModeEnabled": "Dark mode",
-  "tradeItems": "Trade Commodities",
+  "tradeItems": "贸易商品",
   "tradeItem": "Trade Item",
   "clear": "Clear",
   "searchOptions": "Search Options",
@@ -120,16 +121,16 @@
   "restorePortals": "Restore Portals",
   "releaseNotes": "Release Notes",
   "allItems": "All Items",
-  "catalogue": "Catalogue",
-  "constructedTechnologies": "Constructed Technology",
+  "catalogue": "目录",
+  "constructedTechnologies": "已建造的技术",
   "helloGames": "Hello Games",
   "news": "News",
-  "health": "Health & Life Support",
-  "jetpackBoost": "Jetpack",
-  "hazardProtection": "Recharge Hazard Protection",
-  "energy": "Life Support",
-  "stamina": "Stamina",
-  "duration": "Duration: ",
+  "health": "健康和维生系统",
+  "jetpackBoost": "喷气背包",
+  "hazardProtection": "充能危险防护",
+  "energy": "生命维持",
+  "stamina": "体力",
+  "duration": "持续时间： ",
   "nmsWebsite": "nomanssky.com",
   "common": "Common",
   "uncommon": "Uncommon",
@@ -185,5 +186,6 @@
   "valentines": "Valentine's Day",
   "viewItemsAdded": "View items added",
   "newItemsAdded": "New Items Added",
+  "proceduralProducts": "Procedural Products",
   "translatedBy": ""
 }
