--- a/src/assets/lang/language.ar.json
+++ b/src/assets/lang/language.ar.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "en/UpgradeModules.lang",
   "nutrientProcessorJson": "en/NutrientProcessor.lang",
   "constructedTechnologyJson": "en/ConstructedTechnology.lang",
+  "proceduralProductsJson": "en/ProceduralProducts.lang",
   "loading": "Loading",
   "about": "About",
   "aboutContent": "Why did I bother to build this? \r\nOne day I was playing No Man's Sky and wanted to plan out what farmable resources I should have at a new base, I thought that it would be easier to download an app from the Play/App Store than pull up the wiki on my second monitor. I found an app and was hit with a pay wall when I tried to look at the recipes for crafted materials, annoyed I decided to make an app that would be free for everyone to use. It was also a great excuse to play a bit with Flutter app development. \r\n\r\nP.S. I also have a blog, Inside my Mind - by Kurt Lourens. I havent been making use of it as much as I could have, but I have some articles😋.\r\n\r\nThis App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
