--- a/src/assets/lang/language.pt.json
+++ b/src/assets/lang/language.pt.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "pt/UpgradeModules.lang",
   "nutrientProcessorJson": "pt/NutrientProcessor.lang",
   "constructedTechnologyJson": "pt/ConstructedTechnology.lang",
+  "proceduralProductsJson": "py/ProceduralProducts.lang",
   "loading": "Carregando",
   "about": "Sobre",
   "aboutContent": "Porque eu decidi fazer isso? \r\nUm dia eu estava jogando No Man's Sky e estava afim de planejar os recusos farmáveis que eu devia ter na minha nova base, pensei que seria mais fácil baixar um app na Play/App Store do que colocar a wiki no meu outro monitor. Achei um aplicativo e dei de cara na parede quando tentei ver as receitas para materiais craftaveis: era pago, irritado, eu decidi criar um app gratuito para todos usarem. O que também foi uma ótima desculpa para brincar um pouco com o desenvolvimento de apps no Flutter.\r\n\r\nPS: Eu também tenho um blog, 'Inside my mind - by Kurt Lourens.' Não tenho feito o uso dele tanto quanto poderia, mas tenho alguns artigos por lá! 😋.\r\n\r\nThis App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
@@ -185,5 +186,6 @@
   "valentines": "Valentine's Day",
   "viewItemsAdded": "View items added",
   "newItemsAdded": "New Items Added",
+  "proceduralProducts": "Procedural Products",
   "translatedBy": "Gabriel Ubatuba"
 }
