--- a/src/assets/lang/language.ro.json
+++ b/src/assets/lang/language.ro.json
@@ -14,6 +14,7 @@
   "upgradeModulesJson": "en/UpgradeModules.lang",
   "nutrientProcessorJson": "en/NutrientProcessor.lang",
   "constructedTechnologyJson": "en/ConstructedTechnology.lang",
+  "proceduralProductsJson": "en/ProceduralProducts.lang",
   "loading": "Se încarcă",
   "about": "Despre",
   "aboutContent": "De ce m-am gândit să creez acest app?\nÎntr-o zi jucam No Man's Sky și am vrut să planific ce resurse farmabile ar trebui săam la noua mea bază, și m-am gândit că e mai ușor să descarc o aplicație din Play/App Store decât să deschid Wiki-ul pe monitorul secundar. Am găsit o aplicație dar cerea bani când am încercat să mă uit la rețetele pentru materialele create. Deci am creat o aplicație gratuită pentru toată lumea. A fost de asemenea o scuză foarte bună pentru a mă juca puțin cu Flutter (app development).\n\nP.S. Am și un blog, Inside my Mind - by Kurt Lourens. Nu am fost pe cât de activ aș putea să fiu, dar am câteva articole 😋.\n\nAceastă aplicație nu e afiliată cu Hello Games sau No Man's Sky, subsidiari sau companii părinte, ale căror nume, logo și produse sunt afișate în această aplicație.",
@@ -185,5 +186,6 @@
   "valentines": "Valentine's Day",
   "viewItemsAdded": "View items added",
   "newItemsAdded": "New Items Added",
+  "proceduralProducts": "Procedural Products",
   "translatedBy": "Paul Olaru"
 }
