Updated json files

--- a/public/assets/guide/Translation/guide.en.json
+++ b/public/assets/guide/Translation/guide.en.json
@@ -4,7 +4,6 @@
 	"shortTitle": "Translating",
 	"author": "Sphynxcolt",
 	"minutes": 0,
-	"isNew": true,
 	"date": "2020-02-11T16:56:05.446Z",
 	"image": "assets/guide/Translation/guide.png",
 	"tags": [
@@ -40,7 +39,7 @@
 				{
 					"type": "link",
 					"name": "Discord",
-					"content": "https://discord.gg/BpWKP9"
+					"content": "https://discord.gg/q3aFBQM?ref=nmsAssistant"
 				},
 				{
 					"type": "link",
