updated json files

--- a/src/assets/lang/language.pl.json
+++ b/src/assets/lang/language.pl.json
@@ -208,5 +208,13 @@
   "renamePortal": "Rename Portal",
   "addTag": "Add Tag",
   "useAltGlyphs": "Use Alternate Glyph Images",
+  "areYouSure": "Are you sure?",
+  "synchronize": "Synchronise",
+  "inventoryNotUploaded": "Inventory was not uploaded",
+  "inventoryUploaded": "Inventory was uploaded",
+  "inventoryNotRestored": "Inventory was not restored",
+  "inventoryRestored": "Inventory was restored",
+  "backupInventory": "Backup Inventory",
+  "restoreInventory": "Restore Inventory",
   "translatedBy": "Wielbiciel Tacy"
 }
