--- a/src/assets/lang/language.fr.json
+++ b/src/assets/lang/language.fr.json
@@ -88,26 +88,26 @@
   "portalName": "Nom du portail",
   "add": "Ajouter",
   "errorEnterValidName": "Merci d'entrer un nom valide",
-  "search": "Search",
-  "advancedSearch": "Advanced Search",
-  "searchGuide": "Search Guides",
+  "search": "Recherche",
+  "advancedSearch": "RechercheaAvancée",
+  "searchGuide": "Guide de recherche",
   "guides": "Guides",
-  "minutes": "min",
+  "minutes": "minutes",
   "itemName": "Nom de l'article",
   "type": "Type",
-  "group": "Group",
-  "rarity": "Rarity",
-  "minValue": "Min Value",
-  "maxValue": "Max Value",
-  "upgradeModule": "Upgrade Module",
+  "group": "Groupe",
+  "rarity": "Rareté",
+  "minValue": "Quant. Min.",
+  "maxValue": "Quant. Min.",
+  "upgradeModule": "Augmentation de module",
   "homeUseCompactTiles": "Home: Use Compact Tiles",
-  "settings": "Settings",
-  "appLanguage": "Current Language",
+  "settings": "Options",
+  "appLanguage": "Langue actuelle",
   "guidesUseCompactTiles": "Guides: Use Compact Tiles",
-  "darkModeEnabled": "Dark mode",
+  "darkModeEnabled": "Mode sombre",
   "tradeItems": "Marchandises",
-  "tradeItem": "Trade Item",
-  "clear": "Clear",
+  "tradeItem": "Échanger objet",
+  "clear": "Vider",
   "searchOptions": "Search Options",
   "searchResults": "Search Results",
   "updateAvailable": "Update Available",
@@ -208,5 +208,13 @@
   "renamePortal": "Rename Portal",
   "addTag": "Add Tag",
   "useAltGlyphs": "Use Alternate Glyph Images",
+  "areYouSure": "Are you sure?",
+  "synchronize": "Synchronise",
+  "inventoryNotUploaded": "Inventory was not uploaded",
+  "inventoryUploaded": "Inventory was uploaded",
+  "inventoryNotRestored": "Inventory was not restored",
+  "inventoryRestored": "Inventory was restored",
+  "backupInventory": "Backup Inventory",
+  "restoreInventory": "Restore Inventory",
   "translatedBy": "Faskis & Frédéric"
 }
