--- a/src/assets/lang/language.pt.json
+++ b/src/assets/lang/language.pt.json
@@ -36,7 +36,7 @@
   "searchRawMaterials": "Procurar Materiais Brutos",
   "searchProducts": "Procurar Produtos",
   "searchCuriosities": "Procurar Curiosidades",
-  "searchCooking": "Search Cooking",
+  "searchCooking": "Pesquisar Culinária",
   "rawMaterials": "Matérias-primas",
   "rawMaterial": "Material Bruto",
   "products": "Produtos Elaborados",
@@ -55,18 +55,18 @@
   "refineToCreate": "Refine {0} para Criar",
   "usedToCreate": "Usado para Criar",
   "similarRefinerRecipes": "Receitas de Refinação Semelhantes",
-  "inputs": "Inputs",
-  "output": "Output",
-  "help": "Help",
-  "close": "Close",
-  "apply": "Apply",
-  "edit": "Edit",
+  "inputs": "Entradas",
+  "output": "Resultado",
+  "help": "Ajuda",
+  "close": "Fechar",
+  "apply": "Aplicar",
+  "edit": "Editar",
   "delete": "Delete",
-  "deleteAll": "Delete All",
-  "cart": "Cart",
-  "cartContent": "Tap and hold to delete and item.",
-  "noCartItems": "No Items in Cart",
-  "quantity": "Quantity",
+  "deleteAll": "Deletar Tudo",
+  "cart": "Carrinho",
+  "cartContent": "Toque e Segure para excluir o item",
+  "noCartItems": "Nenhum item no carrinho",
+  "quantity": "Quantidade",
   "cooking": "Produtos de cozinha",
   "ingredients": "Ingredients",
   "cookToCreate": "Cook {0} to Create",
@@ -216,5 +216,14 @@
   "inventoryRestored": "Inventory was restored",
   "backupInventory": "Backup Inventory",
   "restoreInventory": "Restore Inventory",
+  "favourites": "Favourites",
+  "openCollective": "Open Collective",
+  "repairedUsing": "Repaired Using",
+  "timers": "Timers",
+  "newTimer": "New Timer",
+  "renameTimer": "Rename Timer",
+  "startDate": "Start Date",
+  "endDate": "End Date",
+  "errorStartDateShouldNotBeAfterEndDate": "Start Date should not be after End Date",
   "translatedBy": "Gabriel Ubatuba"
 }
