--- a/src/assets/lang/language.zh-hant.json
+++ b/src/assets/lang/language.zh-hant.json
@@ -216,5 +216,14 @@
   "inventoryRestored": "Inventory was restored",
   "backupInventory": "Backup Inventory",
   "restoreInventory": "Restore Inventory",
+  "favourites": "Favourites",
+  "openCollective": "Open Collective",
+  "repairedUsing": "Repaired Using",
+  "timers": "Timers",
+  "newTimer": "New Timer",
+  "renameTimer": "Rename Timer",
+  "startDate": "Start Date",
+  "endDate": "End Date",
+  "errorStartDateShouldNotBeAfterEndDate": "Start Date should not be after End Date",
   "translatedBy": ""
 }
