--- a/src/assets/lang/language.ar.json
+++ b/src/assets/lang/language.ar.json
@@ -92,7 +92,7 @@
   "advancedSearch": "Advanced Search",
   "searchGuide": "Search Guides",
   "guides": "Guides",
-  "minutes": "min",
+  "minutes": "{0} minutes",
   "itemName": "Item Name",
   "type": "Type",
   "group": "Group",
@@ -136,7 +136,7 @@
   "common": "Common",
   "uncommon": "Uncommon",
   "rare": "Rare",
-  "seconds": "s",
+  "seconds": "{0} seconds",
   "timeToMake": "Time to Make:",
   "discord": "Discord",
   "twitter": "Twitter",
@@ -196,6 +196,50 @@
   "isConsumable": "Consumable",
   "useNMSFont": "Use No Man's Sky font",
   "techTree": "Tech Tree",
+  "inventoryManagement": "Inventory Management",
+  "inventoryName": "Inventory Name",
   "indonesian": "Indonesian",
+  "galacticAddress": "Galactic Address",
+  "galacticAddressInvalid": "Galactic Address Invalid",
+  "numberOfSlots": "{0} slots",
+  "nextCommunityMission": "Next Community Mission Rewards",
+  "current": "Current",
+  "newPortalEntry": "New Portal Entry",
+  "renamePortal": "Rename Portal",
+  "addTag": "Add Tag",
+  "useAltGlyphs": "Use Alternate Glyph Images",
+  "areYouSure": "Are you sure?",
+  "synchronize": "Synchronise",
+  "inventoryNotUploaded": "Inventory was not uploaded",
+  "inventoryUploaded": "Inventory was uploaded",
+  "inventoryNotRestored": "Inventory was not restored",
+  "inventoryRestored": "Inventory was restored",
+  "backupInventory": "Backup Inventory",
+  "restoreInventory": "Restore Inventory",
+  "favourites": "Favourites",
+  "openCollective": "Open Collective",
+  "repairedUsing": "Repaired Using",
+  "timers": "Timers",
+  "newTimer": "New Timer",
+  "renameTimer": "Rename Timer",
+  "startDate": "Start Date",
+  "endDate": "End Date",
+  "errorStartDateShouldNotBeAfterEndDate": "Start Date should not be after End Date",
+  "hexCoordLabel": "Hex Coordinates",
+  "icons": "Icons",
+  "coordinatesCopied": "Coordinates copied!",
+  "galacticAddressCopied": "Galactic Address copied!",
+  "privacyPolicy": "Privacy Policy",
+  "account": "Account",
+  "switchUser": "Switch User",
+  "logout": "Logout",
+  "turkish": "Turkish",
+  "completed": "Completed",
+  "notStarted": "Not Started",
+  "hours": "{0} hours",
+  "days": "{0} days",
+  "hour": "{0} hour",
+  "day": "{0} day",
+  "timerComplete": "Timer Complete",
   "translatedBy": ""
 }
