--- a/src/assets/lang/language.ru.json
+++ b/src/assets/lang/language.ru.json
@@ -92,7 +92,7 @@
   "advancedSearch": "Расширенный поиск",
   "searchGuide": "Искать гайды",
   "guides": "Гайды",
-  "minutes": "минут",
+  "minutes": "{0} минут",
   "itemName": "Название предмета",
   "type": "Тип",
   "group": "Группа",
@@ -136,7 +136,7 @@
   "common": "Обычный",
   "uncommon": "Необычный",
   "rare": "Редкий",
-  "seconds": "сек",
+  "seconds": "{0} сек",
   "timeToMake": "Время приготовления:",
   "discord": "Discord",
   "twitter": "Twitter",
@@ -225,5 +225,21 @@
   "startDate": "Start Date",
   "endDate": "End Date",
   "errorStartDateShouldNotBeAfterEndDate": "Start Date should not be after End Date",
+  "hexCoordLabel": "Hex Coordinates",
+  "icons": "Icons",
+  "coordinatesCopied": "Coordinates copied!",
+  "galacticAddressCopied": "Galactic Address copied!",
+  "privacyPolicy": "Privacy Policy",
+  "account": "Account",
+  "switchUser": "Switch User",
+  "logout": "Logout",
+  "turkish": "Turkish",
+  "completed": "Completed",
+  "notStarted": "Not Started",
+  "hours": "{0} hours",
+  "days": "{0} days",
+  "hour": "{0} hour",
+  "day": "{0} day",
+  "timerComplete": "Timer Complete",
   "translatedBy": "Kradre, SempKid"
 }
