--- a/src/assets/lang/language.zh-hant.json
+++ b/src/assets/lang/language.zh-hant.json
@@ -92,7 +92,7 @@
   "advancedSearch": "Advanced Search",
   "searchGuide": "Search Guides",
   "guides": "Guides",
-  "minutes": "min",
+  "minutes": "{0} minutes",
   "itemName": "Item Name",
   "type": "Type",
   "group": "Group",
@@ -136,7 +136,7 @@
   "common": "Common",
   "uncommon": "Uncommon",
   "rare": "Rare",
-  "seconds": "s",
+  "seconds": "{0} seconds",
   "timeToMake": "Time to Make:",
   "discord": "Discord",
   "twitter": "Twitter",
@@ -225,5 +225,21 @@
   "startDate": "Start Date",
   "endDate": "End Date",
   "errorStartDateShouldNotBeAfterEndDate": "Start Date should not be after End Date",
+  "hexCoordLabel": "Hex Coordinates",
+  "icons": "Icons",
+  "coordinatesCopied": "Coordinates copied!",
+  "galacticAddressCopied": "Galactic Address copied!",
+  "privacyPolicy": "Privacy Policy",
+  "account": "Account",
+  "switchUser": "Switch User",
+  "logout": "Logout",
+  "turkish": "Turkish",
+  "completed": "Completed",
+  "notStarted": "Not Started",
+  "hours": "{0} hours",
+  "days": "{0} days",
+  "hour": "{0} hour",
+  "day": "{0} day",
+  "timerComplete": "Timer Complete",
   "translatedBy": ""
 }
