--- a/src/assets/lang/language.nl.json
+++ b/src/assets/lang/language.nl.json
@@ -241,5 +241,11 @@
   "hour": "{0} hour",
   "day": "{0} day",
   "timerComplete": "Timer Complete",
+  "termsAndConditions": "Terms and Conditions",
+  "legal": "Legal",
+  "more": "More",
+  "galacticAtlas": "Galactic Atlas",
+  "legalNotice": "This App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
+  "czech": "Czech",
   "translatedBy": "Arnold van Ree & Sphynxcolt"
 }
