--- a/src/assets/lang/language.pl.json
+++ b/src/assets/lang/language.pl.json
@@ -241,5 +241,11 @@
   "hour": "Godziny",
   "day": "Dni",
   "timerComplete": "Minutnik ukończony",
+  "termsAndConditions": "Terms and Conditions",
+  "legal": "Legal",
+  "more": "More",
+  "galacticAtlas": "Galactic Atlas",
+  "legalNotice": "This App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
+  "czech": "Czech",
   "translatedBy": "Wielbiciel Tacy"
 }
