--- a/src/assets/lang/language.it.json
+++ b/src/assets/lang/language.it.json
@@ -1,5 +1,5 @@
 {
-  "title": "Tutte le ricette",
+  "title": "Tutte le oggetti",
   "rawMaterialsJson": "it/RawMaterials.lang",
   "productsJson": "it/Products.lang",
   "otherItemsJson": "it/Others.lang",
@@ -121,7 +121,7 @@
   "backupPortals": "Backup Portali",
   "restorePortals": "Ripristina Portali",
   "releaseNotes": "Note di Rilascio",
-  "allItems": "Tutti gli Oggetti",
+  "allItems": "Tutti gli oggetti",
   "catalogue": "Catalogo",
   "constructedTechnologies": "Tecnologia costruita",
   "helloGames": "Hello Games",
